# semantic-search

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/magento/chatbot/agents/: checkpointer.py  llm_factory.py  orchestrator.py  prompts.py  request_context.py  retrieval_tools.py  tool_call_classifier.py  tools.py
backend/app/magento/chatbot/db/: schema.py
backend/app/magento/chatbot/routers/: admin_dashboard.py  agent.py  classify.py  common.py  export.py  retrieve.py  sync.py  usage.py
backend/app/magento/chatbot/services/: admin_token_service.py  chat_history_service.py  config.py  intent_router.py  magento_client.py  magento_creds_service.py  product_formatter.py  text_chunker.py  vocab_service.py
backend/app/middleware/: logging_middleware.py
backend/app/routers/: chatbot.py  dashboard.py  health.py  magento.py  onboarding.py  search.py  sync.py  token_usage.py  webhook_secret.py  webhooks.py
backend/app/services/: cache_service.py  chat_analytics_service.py  chat_response_service.py  chat_retrieval_service.py  content_ingest_service.py  conversation_service.py  domain_auth_service.py  embedder.py  intent_service.py  license_service.py  llm_completion_service.py  llm_key_service.py  llm_rerank_service.py  mmr.py  product_service.py  qdrant_service.py  query_decomposer.py  rate_limiter.py  rerank_service.py  sparse_embedder.py  token_usage_service.py  wordpress_service.py
backend/app/static/: .gitkeep  semantic-search-woo-plugin.txt
backend/app/templates/: base.html  onboarding.html
backend/app/utils/: gemini.py  llm_logger.py  logging_config.py  slug.py  stage_timer.py
scripts/: backfill_chat_answer_cost.py  create_token_usage_table.py  migrate_collections.py  qdrant_admin.py  qdrant_query_inspect.py
